--- a/css/app.css
+++ b/css/app.css
@@ -142,6 +142,9 @@ button.close{
     color: inherit;
 }
 
+.margin-zero{
+    margin: 0 !important;
+}
 /*=================== Common CSS =====================*/
 
 a.button-collapse.top-nav.full {
@@ -171,6 +174,7 @@ a.button-collapse.top-nav {
 ul.side-nav.fixed li.logo {
     text-align: center;
     border-bottom: 1px solid #DDD;
+    line-height: 1.5;
 }
 
 ul.side-nav.fixed li {
@@ -181,4 +185,8 @@ ul.side-nav.fixed li {
     pointer-events: none;
     display: inline-block;
     margin-bottom: -28px;
+}
+
+#waveform > *{
+    overflow: hidden !important;
 }
