--- a/css/app.css
+++ b/css/app.css
@@ -142,6 +142,14 @@ button.close{
     color: inherit;
 }
 
+header, main, footer {
+    padding-left: 240px; }
+
+@media only screen and (max-width : 992px) {
+    header, main, footer {
+        padding-left: 0; }
+}
+
 .margin-zero{
     margin: 0 !important;
 }
