Finish (i hope) recording and simultaneous record and save to file logic

--- a/css/app.css
+++ b/css/app.css
@@ -207,3 +207,7 @@ ul.side-nav.fixed li {
     font-weight: 500 !important;
     padding-bottom: 0 !important;
 }
+
+.record-text{
+    color: #FF6F00 !important;
+}
