--- a/css/app.css
+++ b/css/app.css
@@ -142,6 +142,15 @@ button.close{
     color: inherit;
 }
 
+.container{
+    height: 100%;
+}
+
+main{
+    height: 100%;
+    width: 100%;
+}
+
 header, main, footer {
     padding-left: 240px; }
 
@@ -157,6 +166,16 @@ header, main, footer {
 
 body{
     background-color: #fefefe;
+}
+
+main{
+    padding-top: 56px;
+}
+
+@media only screen and (min-width: 601px){
+    main{
+        padding-top: 64px;
+    }
 }
 
 a.button-collapse.top-nav.full {
@@ -208,6 +227,33 @@ ul.side-nav.fixed li {
     padding-bottom: 0 !important;
 }
 
+.card-image{
+    height: 200px
+}
+
+.record-container{
+    width: 100% !important;
+    margin-bottom: 0 !important;
+}
+
 .record-text{
     color: #FF6F00 !important;
+}
+
+#micBtn{
+    height: 100px;
+    width: 100px;
+}
+
+#micBtn i{
+    line-height: 100px;
+    font-size: 6rem;
+}
+
+.record-container > .row{
+    margin-bottom: 0 !important;
+}
+
+.button-collapse.top-nav.full{
+    z-index: 999;
 }
