--- a/css/app.css
+++ b/css/app.css
@@ -241,19 +241,30 @@ ul.side-nav.fixed li {
 }
 
 #micBtn{
-    height: 100px;
-    width: 100px;
+    height: 75px;
+    width: 75px;
 }
 
 #micBtn i{
-    line-height: 100px;
-    font-size: 6rem;
+    line-height: 75px;
+    font-size: 4rem;
 }
 
-.record-container > .row{
+.record-container .row{
     margin-bottom: 0 !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
 }
 
 .button-collapse.top-nav.full{
     z-index: 999;
+}
+
+.full-size{
+    width: 100% !important;
+    height: 100% !important;
+}
+
+.collapsible-body{
+    position: relative;
 }
